--- a/bouncing-ball/index.html
+++ b/bouncing-ball/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
+
 <html lang="en" >
 
-<head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="style.css">
-</head>
+  <head>
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+    <title>Ball Bounce</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
 
-<body>
-  <div id='container'>
-    <h1>Ball Bounce</h1>
-    <p>Let's dribble the ball on the platform using any key on your keyboard. Hold a key down to lift the ball, then release the key to drop the ball.</p>
-    <!--<button id='button'>Reset</button>-->
-    <div id='float-circle'></div> 
-    <div id='platform'></div>
-    <div id='floor'></div>
-  </div>
-  
-  <script  src="main.js"></script>
-
-</body>
+  <body>
+    <div id='container'>
+      <h1>Ball Bounce</h1>
+      <p>Let's dribble the ball on the platform using any key on your keyboard. Hold a key down to lift the ball, then release the key to drop the ball.</p>
+      <button type="button" id='button'>Reset</button>
+      <div id='float-circle'></div> 
+      <div id='platform'></div>
+      <div id='floor'></div>
+    </div>
+    
+    <script src="main.js"></script>
+  </body>
 </html>
